[fix/TK-120]: 코드 리뷰 수정(List 방식, 예외 처리)